Fix section spacing

--- a/scss/sections/_page-content.scss
+++ b/scss/sections/_page-content.scss
@@ -438,3 +438,8 @@
         }
     }
 }
+.bottom-divider{
+    border-bottom:1px solid #E0E0E0!important;
+    padding-bottom:30px;
+    margin-bottom:100px;
+}
